--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "discordjs-v14-bot-template",
-  "version": "14.0.0",
-  "description": "A Discord Bot template built by T.F.A#7524!",
+  "name": "boxybot",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Deo-Favente/BoxyBot.git"
   },
   "keywords": [],
-  "author": "T.F.A#7524",
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Deo-Favente/BoxyBot/issues"
+  },
+  "homepage": "https://github.com/Deo-Favente/BoxyBot#readme",
   "dependencies": {
-    "better-sqlite3": "^7.6.2",
+    "better-sqlite3": "^8.1.0",
     "colors": "^1.4.0",
-    "discord-api-types": "^0.36.2",
-    "discord.js": "^14.5.0",
+    "discord.js": "^14.7.1",
+    "mathjs": "^11.5.1",
     "moment": "^2.29.4",
-    "mongoose": "^6.4.4",
-    "ms": "^2.1.3",
-    "node-fetch": "^2.6.7",
-    "pretty-ms": "^6.0.1",
-    "quick.db": "^9.0.5",
+    "mongoose": "^6.9.1",
+    "node-fetch": "^2.6.1",
+    "quick.db": "^9.0.8",
     "super-djs": "^1.7.4"
   }
 }
